--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.textrangedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.textrangedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TextRangeData:interface'
-    summary: <span data-ttu-id="6a1e8-101">描述通过调用返回的数据的接口`textRange.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="6a1e8-101">An interface describing the data returned by calling `textRange.toJSON()`</span></span><!-- --><span data-ttu-id="6a1e8-102">.</span><span class="sxs-lookup"><span data-stu-id="6a1e8-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`textRange.toJSON()`<!-- -->.
     name: Excel.Interfaces.TextRangeData
     fullName: Excel.Interfaces.TextRangeData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.TextRangeData#text:member'
   - uid: 'excel!Excel.Interfaces.TextRangeData#font:member'
     summary: |-
-      <span data-ttu-id="6a1e8-103">返回一个 ShapeFont 对象，该对象表示文本范围的字体属性。</span><span class="sxs-lookup"><span data-stu-id="6a1e8-103">Returns a ShapeFont object that represents the font attributes for the text range.</span></span> <span data-ttu-id="6a1e8-104">只读。</span><span class="sxs-lookup"><span data-stu-id="6a1e8-104">Read-only.</span></span>
+      返回一个 ShapeFont 对象，该对象表示文本范围的字体属性。
 
-      <span data-ttu-id="6a1e8-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a1e8-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -28,9 +28,9 @@ items:
           - 'excel!Excel.Interfaces.ShapeFontData:interface'
   - uid: 'excel!Excel.Interfaces.TextRangeData#text:member'
     summary: |-
-      <span data-ttu-id="6a1e8-106">表示文本范围的纯文本内容。</span><span class="sxs-lookup"><span data-stu-id="6a1e8-106">Represents the plain text content of the text range.</span></span>
+      表示文本范围的纯文本内容。
 
-      <span data-ttu-id="6a1e8-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a1e8-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
