--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.workbookloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.workbookloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="595b1-101">工作簿是顶级对象，其中包含相关的工作簿对象，如工作表、表、范围等。若要了解有关工作簿对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理工作簿](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-workbooks)</span><span class="sxs-lookup"><span data-stu-id="595b1-101">Workbook is the top level object which contains related workbook objects such as worksheets, tables, ranges, etc. To learn more about the workbook object model, read [Work with workbooks using the Excel JavaScript API](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-workbooks)</span></span><!-- --><span data-ttu-id="595b1-102">.</span><span class="sxs-lookup"><span data-stu-id="595b1-102"></span></span>
+      工作簿是顶级对象，其中包含相关的工作簿对象，如工作表、表、范围等。若要了解有关工作簿对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理工作簿](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-workbooks)<!-- -->.
 
-      <span data-ttu-id="595b1-103">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="595b1-103">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.WorkbookLoadOptions
     fullName: Excel.Interfaces.WorkbookLoadOptions
     langs:
@@ -24,11 +24,12 @@ items:
       - 'excel!Excel.Interfaces.WorkbookLoadOptions#properties:member'
       - 'excel!Excel.Interfaces.WorkbookLoadOptions#protection:member'
       - 'excel!Excel.Interfaces.WorkbookLoadOptions#readOnly:member'
+      - 'excel!Excel.Interfaces.WorkbookLoadOptions#showPivotFieldList:member'
       - 'excel!Excel.Interfaces.WorkbookLoadOptions#tables:member'
       - 'excel!Excel.Interfaces.WorkbookLoadOptions#use1904DateSystem:member'
       - 'excel!Excel.Interfaces.WorkbookLoadOptions#usePrecisionAsDisplayed:member'
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#$all:member'
-    summary: '<span data-ttu-id="595b1-104">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="595b1-104">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="595b1-105">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="595b1-105">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="595b1-106">).</span><span class="sxs-lookup"><span data-stu-id="595b1-106"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -41,9 +42,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#application:member'
     summary: |-
-      <span data-ttu-id="595b1-107">表示包含此工作簿的 Excel 应用程序实例。</span><span class="sxs-lookup"><span data-stu-id="595b1-107">Represents the Excel application instance that contains this workbook.</span></span>
+      表示包含此工作簿的 Excel 应用程序实例。
 
-      <span data-ttu-id="595b1-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="595b1-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: application
     fullName: application
     langs:
@@ -56,9 +57,9 @@ items:
           - 'excel!Excel.Interfaces.ApplicationLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#autoSave:member'
     summary: |-
-      <span data-ttu-id="595b1-109">指定工作簿是否处于自动保存模式。</span><span class="sxs-lookup"><span data-stu-id="595b1-109">Specifies whether or not the workbook is in autosave mode.</span></span> <span data-ttu-id="595b1-110">只读。</span><span class="sxs-lookup"><span data-stu-id="595b1-110">Read-Only.</span></span>
+      指定工作簿是否处于自动保存模式。
 
-      <span data-ttu-id="595b1-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="595b1-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoSave
     fullName: autoSave
     langs:
@@ -71,9 +72,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#bindings:member'
     summary: |-
-      <span data-ttu-id="595b1-112">表示属于工作簿的绑定的集合。</span><span class="sxs-lookup"><span data-stu-id="595b1-112">Represents a collection of bindings that are part of the workbook.</span></span>
+      表示属于工作簿的绑定的集合。
 
-      <span data-ttu-id="595b1-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="595b1-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bindings
     fullName: bindings
     langs:
@@ -86,9 +87,9 @@ items:
           - 'excel!Excel.Interfaces.BindingCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#calculationEngineVersion:member'
     summary: |-
-      <span data-ttu-id="595b1-114">返回有关 Excel 计算引擎的版本号。</span><span class="sxs-lookup"><span data-stu-id="595b1-114">Returns a number about the version of Excel Calculation Engine.</span></span> <span data-ttu-id="595b1-115">只读。</span><span class="sxs-lookup"><span data-stu-id="595b1-115">Read-Only.</span></span>
+      返回有关 Excel 计算引擎的版本号。
 
-      <span data-ttu-id="595b1-116">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="595b1-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: calculationEngineVersion
     fullName: calculationEngineVersion
     langs:
@@ -101,9 +102,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#chartDataPointTrack:member'
     summary: |-
-      <span data-ttu-id="595b1-117">如果工作簿中的所有图表都跟踪它们所附加的实际数据点，则为 True。</span><span class="sxs-lookup"><span data-stu-id="595b1-117">True if all charts in the workbook are tracking the actual data points to which they are attached.</span></span> <span data-ttu-id="595b1-118">假如果图表跟踪数据点的索引。</span><span class="sxs-lookup"><span data-stu-id="595b1-118">False if the charts track the index of the data points.</span></span>
+      如果工作簿中的所有图表都跟踪它们所附加的实际数据点，则为 True。 假如果图表跟踪数据点的索引。
 
-      <span data-ttu-id="595b1-119">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="595b1-119">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: chartDataPointTrack
     fullName: chartDataPointTrack
     langs:
@@ -116,9 +117,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#isDirty:member'
     summary: |-
-      <span data-ttu-id="595b1-120">指定自上次保存以来是否对指定的工作簿进行任何更改。</span><span class="sxs-lookup"><span data-stu-id="595b1-120">Specifies whether or not changes have been made since the workbook was last saved.</span></span> <span data-ttu-id="595b1-121">如果要关闭修改过的工作簿而不保存或提示保存它，则可以将该属性设置为 true。</span><span class="sxs-lookup"><span data-stu-id="595b1-121">You can set this property to true if you want to close a modified workbook without either saving it or being prompted to save it.</span></span>
+      指定自上次保存工作簿后是否进行了更改。 如果要关闭修改过的工作簿而不保存或提示保存它，则可以将该属性设置为 true。
 
-      <span data-ttu-id="595b1-122">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="595b1-122">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isDirty
     fullName: isDirty
     langs:
@@ -131,9 +132,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="595b1-123">获取工作簿名称。</span><span class="sxs-lookup"><span data-stu-id="595b1-123">Gets the workbook name.</span></span> <span data-ttu-id="595b1-124">只读。</span><span class="sxs-lookup"><span data-stu-id="595b1-124">Read-only.</span></span>
+      获取工作簿名称。
 
-      <span data-ttu-id="595b1-125">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="595b1-125">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -146,9 +147,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#previouslySaved:member'
     summary: |-
-      <span data-ttu-id="595b1-126">指定工作簿是否已在本地或在线保存。</span><span class="sxs-lookup"><span data-stu-id="595b1-126">Specifies whether or not the workbook has ever been saved locally or online.</span></span> <span data-ttu-id="595b1-127">只读。</span><span class="sxs-lookup"><span data-stu-id="595b1-127">Read-Only.</span></span>
+      指定是否曾在本地或联机保存工作簿。
 
-      <span data-ttu-id="595b1-128">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="595b1-128">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: previouslySaved
     fullName: previouslySaved
     langs:
@@ -161,9 +162,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#properties:member'
     summary: |-
-      <span data-ttu-id="595b1-129">获取工作簿属性。</span><span class="sxs-lookup"><span data-stu-id="595b1-129">Gets the workbook properties.</span></span>
+      获取工作簿属性。
 
-      <span data-ttu-id="595b1-130">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="595b1-130">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: properties
     fullName: properties
     langs:
@@ -176,9 +177,9 @@ items:
           - 'excel!Excel.Interfaces.DocumentPropertiesLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#protection:member'
     summary: |-
-      <span data-ttu-id="595b1-131">返回工作簿的工作簿保护对象。</span><span class="sxs-lookup"><span data-stu-id="595b1-131">Returns workbook protection object for a workbook.</span></span>
+      返回工作簿的工作簿保护对象。
 
-      <span data-ttu-id="595b1-132">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="595b1-132">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
     fullName: protection
     langs:
@@ -191,9 +192,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookProtectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#readOnly:member'
     summary: |-
-      <span data-ttu-id="595b1-133">如果在只读模式下打开工作簿，则为 True。</span><span class="sxs-lookup"><span data-stu-id="595b1-133">True if the workbook is open in Read-only mode.</span></span> <span data-ttu-id="595b1-134">只读。</span><span class="sxs-lookup"><span data-stu-id="595b1-134">Read-only.</span></span>
+      如果在只读模式下打开工作簿，则为 True。
 
-      <span data-ttu-id="595b1-135">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="595b1-135">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: readOnly
     fullName: readOnly
     langs:
@@ -204,11 +205,27 @@ items:
       return:
         type:
           - boolean
+  - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#showPivotFieldList:member'
+    summary: |-
+      指定是否在工作簿级别显示数据透视表的 "字段列表" 窗格。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: showPivotFieldList
+    fullName: showPivotFieldList
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showPivotFieldList?: boolean;'
+      return:
+        type:
+          - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#tables:member'
     summary: |-
-      <span data-ttu-id="595b1-136">表示与工作簿关联的表的集合。</span><span class="sxs-lookup"><span data-stu-id="595b1-136">Represents a collection of tables associated with the workbook.</span></span>
+      表示与工作簿关联的表的集合。
 
-      <span data-ttu-id="595b1-137">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="595b1-137">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tables
     fullName: tables
     langs:
@@ -221,9 +238,9 @@ items:
           - 'excel!Excel.Interfaces.TableCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#use1904DateSystem:member'
     summary: |-
-      <span data-ttu-id="595b1-138">如果工作簿使用 1904 日期系统，则为 True。</span><span class="sxs-lookup"><span data-stu-id="595b1-138">True if the workbook uses the 1904 date system.</span></span>
+      如果工作簿使用 1904 日期系统，则为 True。
 
-      <span data-ttu-id="595b1-139">\[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="595b1-139">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: use1904DateSystem
     fullName: use1904DateSystem
@@ -237,9 +254,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#usePrecisionAsDisplayed:member'
     summary: |-
-      <span data-ttu-id="595b1-140">如果此工作簿中的计算仅使用显示的数字精度来完成，则为 True。</span><span class="sxs-lookup"><span data-stu-id="595b1-140">True if calculations in this workbook will be done using only the precision of the numbers as they're displayed.</span></span> <span data-ttu-id="595b1-141">将此属性从 false 切换到 true 时，数据将永久丢失精度。</span><span class="sxs-lookup"><span data-stu-id="595b1-141">Data will permanently lose accuracy when switching this property from false to true.</span></span>
+      如果此工作簿中的计算仅使用显示的数字精度来完成，则为 True。 将此属性从 false 切换到 true 时，数据将永久丢失精度。
 
-      <span data-ttu-id="595b1-142">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="595b1-142">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: usePrecisionAsDisplayed
     fullName: usePrecisionAsDisplayed
     langs:
