--- a/docs/docs-ref-autogen/excel/excel/excel.rangefill.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.rangefill.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.RangeFill:class'
     summary: |-
-      <span data-ttu-id="2dc50-101">表示 range 对象的背景。</span><span class="sxs-lookup"><span data-stu-id="2dc50-101">Represents the background of a range object.</span></span>
+      表示 range 对象的背景。
 
-      <span data-ttu-id="2dc50-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2dc50-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.RangeFill
     fullName: Excel.RangeFill
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.RangeFill#clear:member(1)'
@@ -29,9 +29,9 @@ items:
       - 'excel!Excel.RangeFill#toJSON:member(1)'
   - uid: 'excel!Excel.RangeFill#clear:member(1)'
     summary: |-
-      <span data-ttu-id="2dc50-103">重置区域背景。</span><span class="sxs-lookup"><span data-stu-id="2dc50-103">Resets the range background.</span></span>
+      重置区域背景。
 
-      <span data-ttu-id="2dc50-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2dc50-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: clear()
     fullName: clear()
     langs:
@@ -45,7 +45,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="2dc50-105">示例</span><span class="sxs-lookup"><span data-stu-id="2dc50-105">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Excel.run(function (ctx) { 
@@ -65,9 +65,9 @@ items:
           ```
   - uid: 'excel!Excel.RangeFill#color:member'
     summary: |-
-      <span data-ttu-id="2dc50-106">代表表单\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的背景色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="2dc50-106">HTML color code representing the color of the background, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange")</span></span>
+      代表表单\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的背景色的 HTML 颜色代码。
 
-      <span data-ttu-id="2dc50-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2dc50-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -79,7 +79,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.RangeFill#context:member'
-    summary: <span data-ttu-id="2dc50-108">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="2dc50-108">The request context associated with the object.</span></span> <span data-ttu-id="2dc50-109">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="2dc50-109">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -91,7 +91,7 @@ items:
         type:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.RangeFill#load:member(1)'
-    summary: <span data-ttu-id="2dc50-110">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="2dc50-110">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="2dc50-111">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="2dc50-111">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -105,11 +105,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="2dc50-112">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="2dc50-112">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.RangeFillLoadOptions:interface'
   - uid: 'excel!Excel.RangeFill#load:member(2)'
-    summary: <span data-ttu-id="2dc50-113">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="2dc50-113">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="2dc50-114">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="2dc50-114">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -123,7 +123,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="2dc50-115">示例</span><span class="sxs-lookup"><span data-stu-id="2dc50-115">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Excel.run(function (ctx) { 
@@ -160,11 +160,11 @@ items:
           ```
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="2dc50-116">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="2dc50-116">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.RangeFill#load:member(3)'
-    summary: <span data-ttu-id="2dc50-117">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="2dc50-117">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="2dc50-118">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="2dc50-118">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -182,7 +182,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="2dc50-119">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="2dc50-119">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -191,9 +191,9 @@ items:
                       }
   - uid: 'excel!Excel.RangeFill#pattern:member'
     summary: |-
-      <span data-ttu-id="2dc50-120">获取或设置区域的图案。</span><span class="sxs-lookup"><span data-stu-id="2dc50-120">Gets or sets the pattern of a Range.</span></span> <span data-ttu-id="2dc50-121">有关详细信息，请参阅 Excel.FillPattern。</span><span class="sxs-lookup"><span data-stu-id="2dc50-121">See Excel.FillPattern for details.</span></span> <span data-ttu-id="2dc50-122">不支持 LinearGradient 和 RectangularGradient。</span><span class="sxs-lookup"><span data-stu-id="2dc50-122">LinearGradient and RectangularGradient are not supported.</span></span> <span data-ttu-id="2dc50-123">如果为 null 值，则表示整个区域没有统一的模式设置。</span><span class="sxs-lookup"><span data-stu-id="2dc50-123">A null value indicates that the entire range doesn't have uniform pattern setting.</span></span>
+      区域的图案。 有关详细信息，请参阅 Excel.FillPattern。 不支持 LinearGradient 和 RectangularGradient。 如果为 null 值，则表示整个区域没有统一的模式设置。
 
-      <span data-ttu-id="2dc50-124">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2dc50-124">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pattern
     fullName: pattern
     langs:
@@ -206,9 +206,9 @@ items:
           - 'excel!Excel.RangeFill#pattern~0:complex'
   - uid: 'excel!Excel.RangeFill#patternColor:member'
     summary: |-
-      <span data-ttu-id="2dc50-125">设置表示范围模式的颜色的 HTML 颜色代码，格式\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。</span><span class="sxs-lookup"><span data-stu-id="2dc50-125">Sets HTML color code representing the color of the Range pattern, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span> <span data-ttu-id="2dc50-126">获取表示范围模式的颜色的 HTML 颜色代码，格式\#RRGGBB （例如 "FFA500"）。</span><span class="sxs-lookup"><span data-stu-id="2dc50-126">Gets HTML color code representing the color of the Range pattern, of the form \#RRGGBB (e.g. "FFA500").</span></span>
+      表示范围模式的颜色的 HTML 颜色代码，格式\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）。
 
-      <span data-ttu-id="2dc50-127">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2dc50-127">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: patternColor
     fullName: patternColor
     langs:
@@ -221,9 +221,9 @@ items:
           - string
   - uid: 'excel!Excel.RangeFill#patternTintAndShade:member'
     summary: |-
-      <span data-ttu-id="2dc50-128">返回或设置一个使区域填充的图案颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。</span><span class="sxs-lookup"><span data-stu-id="2dc50-128">Returns or sets a double that lightens or darkens a pattern color for Range Fill, the value is between -1 (darkest) and 1 (brightest), with 0 for the original color.</span></span> <span data-ttu-id="2dc50-129">如果模式 tintAndShades 不一致，则将返回 null。</span><span class="sxs-lookup"><span data-stu-id="2dc50-129">If the pattern tintAndShades are not uniform, null will be returned.</span></span>
+      指定用于将区域填充的图案颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 如果模式 tintAndShades 不一致，则将返回 null。
 
-      <span data-ttu-id="2dc50-130">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2dc50-130">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: patternTintAndShade
     fullName: patternTintAndShade
     langs:
@@ -235,9 +235,9 @@ items:
         type:
           - number
   - uid: 'excel!Excel.RangeFill#set:member(1)'
-    summary: '<span data-ttu-id="2dc50-131">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="2dc50-131">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="2dc50-132">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="2dc50-132">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="2dc50-133">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="2dc50-133">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.RangeFill): void`
     name: 'set(properties, options)'
@@ -253,15 +253,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="2dc50-134">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="2dc50-134">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.RangeFillUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="2dc50-135">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="2dc50-135">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.RangeFill#set:member(2)'
-    summary: '<span data-ttu-id="2dc50-136">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="2dc50-136">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -280,9 +280,9 @@ items:
             - 'excel!Excel.RangeFill:class'
   - uid: 'excel!Excel.RangeFill#tintAndShade:member'
     summary: |-
-      <span data-ttu-id="2dc50-137">返回或设置一个使区域填充的颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。</span><span class="sxs-lookup"><span data-stu-id="2dc50-137">Returns or sets a double that lightens or darkens a color for Range Fill, the value is between -1 (darkest) and 1 (brightest), with 0 for the original color.</span></span> <span data-ttu-id="2dc50-138">如果 tintAndShades 不是统一的，将返回 null。</span><span class="sxs-lookup"><span data-stu-id="2dc50-138">If the tintAndShades are not uniform, null will be returned.</span></span>
+      指定用于将区域填充的颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 如果 tintAndShades 不是统一的，将返回 null。
 
-      <span data-ttu-id="2dc50-139">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2dc50-139">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tintAndShade
     fullName: tintAndShade
     langs:
@@ -294,7 +294,7 @@ items:
         type:
           - number
   - uid: 'excel!Excel.RangeFill#toJSON:member(1)'
-    summary: '<span data-ttu-id="2dc50-140">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="2dc50-140">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="2dc50-141">.</span><span class="sxs-lookup"><span data-stu-id="2dc50-141"></span></span> <span data-ttu-id="2dc50-142">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="2dc50-142"></span></span><!-- --><span data-ttu-id="2dc50-143">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 RangeFill 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.RangeFillData`</span><span class="sxs-lookup"><span data-stu-id="2dc50-143">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.RangeFill object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.RangeFillData`</span></span><!-- --><span data-ttu-id="2dc50-144">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="2dc50-144">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 RangeFill 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.RangeFillData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -307,7 +307,7 @@ items:
           - 'excel!Excel.Interfaces.RangeFillData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -326,7 +326,7 @@ references:
         fullName: ' | "None" | "Solid" | "Gray50" | "Gray75" | "Gray25" | "Horizontal" | "Vertical" | "Down" | "Up" | "Checker" | "SemiGray75" | "LightHorizontal" | "LightVertical" | "LightDown" | "LightUp" | "Grid" | "CrissCross" | "Gray16" | "Gray8" | "LinearGradient" | "RectangularGradient"'
   - uid: 'excel!Excel.Interfaces.RangeFillUpdateData:interface'
     name: Interfaces.RangeFillUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.RangeFillData:interface'
     name: Excel.Interfaces.RangeFillData
