--- a/docs/docs-ref-autogen/excel/excel/excel.rowcolumnpivothierarchy.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.rowcolumnpivothierarchy.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.RowColumnPivotHierarchy:class'
     summary: |-
-      <span data-ttu-id="1dc66-101">表示 Excel RowColumnPivotHierarchy。</span><span class="sxs-lookup"><span data-stu-id="1dc66-101">Represents the Excel RowColumnPivotHierarchy.</span></span>
+      表示 Excel RowColumnPivotHierarchy。
 
-      <span data-ttu-id="1dc66-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1dc66-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.RowColumnPivotHierarchy
     fullName: Excel.RowColumnPivotHierarchy
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.RowColumnPivotHierarchy#context:member'
@@ -27,7 +27,7 @@ items:
       - 'excel!Excel.RowColumnPivotHierarchy#setToDefault:member(1)'
       - 'excel!Excel.RowColumnPivotHierarchy#toJSON:member(1)'
   - uid: 'excel!Excel.RowColumnPivotHierarchy#context:member'
-    summary: <span data-ttu-id="1dc66-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="1dc66-103">The request context associated with the object.</span></span> <span data-ttu-id="1dc66-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="1dc66-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -40,9 +40,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.RowColumnPivotHierarchy#fields:member'
     summary: |-
-      <span data-ttu-id="1dc66-105">返回与 RowColumnPivotHierarchy 相关联的 PivotFields。</span><span class="sxs-lookup"><span data-stu-id="1dc66-105">Returns the PivotFields associated with the RowColumnPivotHierarchy.</span></span>
+      返回与 RowColumnPivotHierarchy 相关联的 PivotFields。
 
-      <span data-ttu-id="1dc66-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1dc66-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fields
     fullName: fields
     langs:
@@ -55,9 +55,9 @@ items:
           - 'excel!Excel.PivotFieldCollection:class'
   - uid: 'excel!Excel.RowColumnPivotHierarchy#id:member'
     summary: |-
-      <span data-ttu-id="1dc66-107">RowColumnPivotHierarchy 的 ID。</span><span class="sxs-lookup"><span data-stu-id="1dc66-107">Id of the RowColumnPivotHierarchy.</span></span>
+      RowColumnPivotHierarchy 的 ID。
 
-      <span data-ttu-id="1dc66-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1dc66-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -69,7 +69,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.RowColumnPivotHierarchy#load:member(1)'
-    summary: <span data-ttu-id="1dc66-109">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="1dc66-109">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="1dc66-110">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="1dc66-110">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -83,11 +83,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="1dc66-111">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="1dc66-111">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.RowColumnPivotHierarchyLoadOptions:interface'
   - uid: 'excel!Excel.RowColumnPivotHierarchy#load:member(2)'
-    summary: <span data-ttu-id="1dc66-112">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="1dc66-112">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="1dc66-113">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="1dc66-113">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -101,11 +101,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="1dc66-114">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="1dc66-114">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.RowColumnPivotHierarchy#load:member(3)'
-    summary: <span data-ttu-id="1dc66-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="1dc66-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="1dc66-116">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="1dc66-116">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -123,7 +123,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="1dc66-117">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="1dc66-117">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -132,9 +132,9 @@ items:
                       }
   - uid: 'excel!Excel.RowColumnPivotHierarchy#name:member'
     summary: |-
-      <span data-ttu-id="1dc66-118">RowColumnPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="1dc66-118">Name of the RowColumnPivotHierarchy.</span></span>
+      RowColumnPivotHierarchy 的名称。
 
-      <span data-ttu-id="1dc66-119">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1dc66-119">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -147,9 +147,9 @@ items:
           - string
   - uid: 'excel!Excel.RowColumnPivotHierarchy#position:member'
     summary: |-
-      <span data-ttu-id="1dc66-120">RowColumnPivotHierarchy 的位置。</span><span class="sxs-lookup"><span data-stu-id="1dc66-120">Position of the RowColumnPivotHierarchy.</span></span>
+      RowColumnPivotHierarchy 的位置。
 
-      <span data-ttu-id="1dc66-121">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1dc66-121">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
     fullName: position
     langs:
@@ -161,9 +161,9 @@ items:
         type:
           - number
   - uid: 'excel!Excel.RowColumnPivotHierarchy#set:member(1)'
-    summary: '<span data-ttu-id="1dc66-122">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="1dc66-122">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="1dc66-123">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="1dc66-123">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="1dc66-124">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="1dc66-124">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.RowColumnPivotHierarchy): void`
     name: 'set(properties, options)'
@@ -179,15 +179,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="1dc66-125">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="1dc66-125">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.RowColumnPivotHierarchyUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="1dc66-126">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="1dc66-126">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.RowColumnPivotHierarchy#set:member(2)'
-    summary: '<span data-ttu-id="1dc66-127">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="1dc66-127">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -206,9 +206,9 @@ items:
             - 'excel!Excel.RowColumnPivotHierarchy:class'
   - uid: 'excel!Excel.RowColumnPivotHierarchy#setToDefault:member(1)'
     summary: |-
-      <span data-ttu-id="1dc66-128">将 RowColumnPivotHierarchy 重置回其默认值。</span><span class="sxs-lookup"><span data-stu-id="1dc66-128">Reset the RowColumnPivotHierarchy back to its default values.</span></span>
+      将 RowColumnPivotHierarchy 重置回其默认值。
 
-      <span data-ttu-id="1dc66-129">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1dc66-129">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: setToDefault()
     fullName: setToDefault()
     langs:
@@ -221,7 +221,7 @@ items:
           - void
         description: ''
   - uid: 'excel!Excel.RowColumnPivotHierarchy#toJSON:member(1)'
-    summary: '<span data-ttu-id="1dc66-130">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="1dc66-130">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="1dc66-131">.</span><span class="sxs-lookup"><span data-stu-id="1dc66-131"></span></span> <span data-ttu-id="1dc66-132">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="1dc66-132"></span></span><!-- --><span data-ttu-id="1dc66-133">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 RowColumnPivotHierarchy 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.RowColumnPivotHierarchyData`</span><span class="sxs-lookup"><span data-stu-id="1dc66-133">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.RowColumnPivotHierarchy object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.RowColumnPivotHierarchyData`</span></span><!-- --><span data-ttu-id="1dc66-134">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="1dc66-134">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 RowColumnPivotHierarchy 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.RowColumnPivotHierarchyData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -234,7 +234,7 @@ items:
           - 'excel!Excel.Interfaces.RowColumnPivotHierarchyData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -246,7 +246,7 @@ references:
     name: Excel.Interfaces.RowColumnPivotHierarchyLoadOptions
   - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyUpdateData:interface'
     name: Interfaces.RowColumnPivotHierarchyUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyData:interface'
     name: Excel.Interfaces.RowColumnPivotHierarchyData
